--- a/src/app/major-class-form/major-class-form.component.html
+++ b/src/app/major-class-form/major-class-form.component.html
@@ -1,74 +1,77 @@
-<ol class="breadcrumb">
-    <li><a routerLink="/home">Home</a></li>
-    <li><a routerLink="/major-class">Major Classes</a></li>
-    <li class="active">Manage Major Class</li>
-</ol>
+<section @fadeInAnimation>
 
-<br/>
+  <ol class="breadcrumb">
+      <li><a routerLink="/home">Home</a></li>
+      <li><a routerLink="/major-class">Major Classes</a></li>
+      <li class="active">Manage Major Class</li>
+  </ol>
 
-<a class="btn btn-primary" routerLink="/major-class">Return to Major Classs</a>
+  <br/>
 
-<h1>Manage Major Class</h1>
+  <a class="btn btn-primary" routerLink="/major-class">Return to Major Classs</a>
 
-<div [ngClass]="(errorMessage)?'alert alert-danger':'alert alert-success'" role="alert" *ngIf="errorMessage || successMessage">
-    {{errorMessage}} {{successMessage}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
+  <h1>Manage Major Class</h1>
 
-<form (ngSubmit)="saveMajorClass(major_class.major_class_id)"  #majorClassForm="ngForm" class="form-horizontal">
-  
-  <input [(ngModel)]="major_class.major_class_id" #major_class_id="ngModel" type="hidden" name="major_class_id">
-
-  <div class="form-group">
-    <label for="major_id" class="col-sm-2 control-label">Major</label>
-    <div class="col-sm-10">
-      <select class="form-control" [compareWith]="compareMajorId" [(ngModel)]="major_class.major_id" id="major_id" name="major_id" required>
-        <option *ngFor="let major of major" [ngValue]= "major">{{major.major}}</option>
-      </select>
-      <span *ngIf="formErrors.major_id" class="text-danger">
-        {{ formErrors.major_id }}
-      </span>
-    </div>
-      <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
-      <!--https://angular.io/api/forms/SelectControlValueAccessor-->
+  <div [ngClass]="(errorMessage)?'alert alert-danger':'alert alert-success'" role="alert" *ngIf="errorMessage || successMessage">
+      {{errorMessage}} {{successMessage}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
   </div>
 
+  <form (ngSubmit)="saveMajorClass(major_class.major_class_id)"  #majorClassForm="ngForm" class="form-horizontal">
+    
+    <input [(ngModel)]="major_class.major_class_id" #major_class_id="ngModel" type="hidden" name="major_class_id">
 
-  <!--<div class="form-group">
-    <label for="major_id" class="col-sm-2 control-label">Major ID</label>
-    <div class="col-sm-10">
-      <input [(ngModel)]="major_class.major_id" #major_id="ngModel" type="text" class="form-control" id="major_id" name="major_id" placeholder="Major ID" required>
+    <div class="form-group">
+      <label for="major_id" class="col-sm-2 control-label">Major</label>
+      <div class="col-sm-10">
+        <select class="form-control" [compareWith]="compareMajorId" [(ngModel)]="major_class.major_id" id="major_id" name="major_id" required>
+          <option *ngFor="let major of major" [ngValue]= "major">{{major.major}}</option>
+        </select>
+        <span *ngIf="formErrors.major_id" class="text-danger">
+          {{ formErrors.major_id }}
+        </span>
+      </div>
+        <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
+        <!--https://angular.io/api/forms/SelectControlValueAccessor-->
     </div>
-  </div>-->
 
-  <div class="form-group">
-    <label for="class_id" class="col-sm-2 control-label">Class</label>
-    <div class="col-sm-10">
-      <select class="form-control" [compareWith]="compareClassId" [(ngModel)]="major_class.class_id" id="class_id" name="class_id" required>
-        <option *ngFor="let classObj of classObj" [ngValue]= "classObj">{{classObj.subject}} - {{classObj.course}}</option>
-      </select>
-      <span *ngIf="formErrors.class_id" class="text-danger">
-        {{ formErrors.class_id }}
-      </span>
-    </div>
-      <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
-      <!--https://angular.io/api/forms/SelectControlValueAccessor-->
-  </div>
-<!--
-  <div class="form-group">
-    <label for="class_id" class="col-sm-2 control-label">Class ID</label>
-    <div class="col-sm-10">
-      <input [(ngModel)]="major_class.class_id" #class_id="ngModel" type="text" class="form-control" id="class_id" name="class_id" placeholder="Class ID" required>
-    </div>
-  </div>-->
 
-   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button [disabled]="!majorClassForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
-    </div>
-  </div>
-  
-</form>
+    <!--<div class="form-group">
+      <label for="major_id" class="col-sm-2 control-label">Major ID</label>
+      <div class="col-sm-10">
+        <input [(ngModel)]="major_class.major_id" #major_id="ngModel" type="text" class="form-control" id="major_id" name="major_id" placeholder="Major ID" required>
+      </div>
+    </div>-->
 
+    <div class="form-group">
+      <label for="class_id" class="col-sm-2 control-label">Class</label>
+      <div class="col-sm-10">
+        <select class="form-control" [compareWith]="compareClassId" [(ngModel)]="major_class.class_id" id="class_id" name="class_id" required>
+          <option *ngFor="let classObj of classObj" [ngValue]= "classObj">{{classObj.subject}} - {{classObj.course}}</option>
+        </select>
+        <span *ngIf="formErrors.class_id" class="text-danger">
+          {{ formErrors.class_id }}
+        </span>
+      </div>
+        <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
+        <!--https://angular.io/api/forms/SelectControlValueAccessor-->
+    </div>
+  <!--
+    <div class="form-group">
+      <label for="class_id" class="col-sm-2 control-label">Class ID</label>
+      <div class="col-sm-10">
+        <input [(ngModel)]="major_class.class_id" #class_id="ngModel" type="text" class="form-control" id="class_id" name="class_id" placeholder="Class ID" required>
+      </div>
+    </div>-->
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button [disabled]="!majorClassForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+    
+  </form>
+
+</section>
