--- a/src/app/major-class/major-class.component.html
+++ b/src/app/major-class/major-class.component.html
@@ -1,39 +1,42 @@
-<ol class="breadcrumb">
-    <li><a routerLink="/home">Home</a></li>
-    <li class="active">Major Class</li>
-</ol>
+<section @fadeInAnimation>
 
-<br/>
+  <ol class="breadcrumb">
+      <li><a routerLink="/home">Home</a></li>
+      <li class="active">Major Class</li>
+  </ol>
 
-<div [ngClass]="(errorMessage)?'alert alert-danger':'alert alert-success'" role="alert" *ngIf="errorMessage || successMessage">
-    {{errorMessage}} {{successMessage}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
+  <br/>
 
-<h2>Major Class</h2>
+  <div [ngClass]="(errorMessage)?'alert alert-danger':'alert alert-success'" role="alert" *ngIf="errorMessage || successMessage">
+      {{errorMessage}} {{successMessage}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
 
-<a class="btn btn-primary" routerLink="/major-class/add">Add Major Class</a>
+  <h2>Major Class</h2>
 
-<table class="table table-striped table-bordered" id="dataTable" style="width:100%">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Major</th>
-      <th>Class</th>
-      <th>Admin</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let major_class of major_classes">
-      <td>{{major_class.major_class_id}}</td>
-      <td>{{major_class.hasOwnProperty('major_id') ? major_class.major_id.major : '' }}</td>
-      <td>{{major_class.hasOwnProperty('class_id') ? major_class.class_id.subject + ' - ' + major_class.class_id.course : '' }}</td>
-      <td class="text-center">
-        <a class="btn btn-primary" [routerLink]="['/major-class/edit/', major_class.major_class_id]">Edit</a>&nbsp;
-        <button (click)="deleteMajorClass(major_class.major_class_id)" class="btn btn-danger">Delete</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+  <a class="btn btn-primary" routerLink="/major-class/add">Add Major Class</a>
+
+  <table class="table table-striped table-bordered" id="dataTable" style="width:100%">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Major</th>
+        <th>Class</th>
+        <th>Admin</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let major_class of major_classes">
+        <td>{{major_class.major_class_id}}</td>
+        <td>{{major_class.hasOwnProperty('major_id') ? major_class.major_id.major : '' }}</td>
+        <td>{{major_class.hasOwnProperty('class_id') ? major_class.class_id.subject + ' - ' + major_class.class_id.course : '' }}</td>
+        <td class="text-center">
+          <a class="btn btn-primary" [routerLink]="['/major-class/edit/', major_class.major_class_id]">Edit</a>&nbsp;
+          <button (click)="deleteMajorClass(major_class.major_class_id)" class="btn btn-danger">Delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</section>
