--- a/src/app/student-class-form/student-class-form.component.html
+++ b/src/app/student-class-form/student-class-form.component.html
@@ -1,71 +1,74 @@
-<ol class="breadcrumb">
-    <li><a routerLink="/home">Home</a></li>
-    <li><a routerLink="/student-class">Student Class</a></li>
-    <li class="active">Manage Student Class</li>
-</ol>
+<section @fadeInAnimation>
 
-<br/>
+  <ol class="breadcrumb">
+      <li><a routerLink="/home">Home</a></li>
+      <li><a routerLink="/student-class">Student Class</a></li>
+      <li class="active">Manage Student Class</li>
+  </ol>
 
-<a class="btn btn-primary" routerLink="/student-class">Return to Student Class</a>
+  <br/>
 
-<h1>Manage Student Class</h1>
+  <a class="btn btn-primary" routerLink="/student-class">Return to Student Class</a>
 
-<div [ngClass]="(errorMessage)?'alert alert-danger':'alert alert-success'" role="alert" *ngIf="errorMessage || successMessage">
-    {{errorMessage}} {{successMessage}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
+  <h1>Manage Student Class</h1>
 
-<form (ngSubmit)="saveStudentClass(student_class.student_class_id)"  #studentClassForm="ngForm" class="form-horizontal">
-<input [(ngModel)]="student_class.student_class_id" type="hidden" name="student_class_id">
-<div class="form-group">
-  <label for="student_id" class="col-sm-2 control-label">Student</label>
-  <div class="col-sm-10">
-    <select class="form-control" [compareWith]="compareStudentId" [(ngModel)]="student_class.student_id" id="student_id" name="student_id" required>
-      <option *ngFor="let student of student" [ngValue]= "student">{{student.last_name}}, {{student.first_name}}</option>
-    </select>
-    <span *ngIf="formErrors.student_id" class="text-danger">
-      {{ formErrors.student_id }}
-    </span>
+  <div [ngClass]="(errorMessage)?'alert alert-danger':'alert alert-success'" role="alert" *ngIf="errorMessage || successMessage">
+      {{errorMessage}} {{successMessage}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
   </div>
-    <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
-    <!--https://angular.io/api/forms/SelectControlValueAccessor-->
-</div>
 
-<!--<form (ngSubmit)="saveStudentClass(student_class.student_class_id)"  #studentClassForm="ngForm" class="form-horizontal">
+  <form (ngSubmit)="saveStudentClass(student_class.student_class_id)"  #studentClassForm="ngForm" class="form-horizontal">
   <input [(ngModel)]="student_class.student_class_id" type="hidden" name="student_class_id">
   <div class="form-group">
-    <label for="student_id" class="col-sm-2 control-label">Student ID</label>
+    <label for="student_id" class="col-sm-2 control-label">Student</label>
     <div class="col-sm-10">
-      <input [(ngModel)]="student_class.student_id" type="text" class="form-control" id="student_id" name="student_id" placeholder="Student ID" required>
-    </div>
-  </div>-->
-
-  <div class="form-group">
-    <label for="class_id" class="col-sm-2 control-label">Class</label>
-    <div class="col-sm-10">
-      <select class="form-control" [compareWith]="compareClassId" [(ngModel)]="student_class.class_id" id="class_id" name="class_id" required>
-        <option *ngFor="let classObj of classObj" [ngValue]= "classObj">{{classObj.subject}} - {{classObj.course}}</option>
+      <select class="form-control" [compareWith]="compareStudentId" [(ngModel)]="student_class.student_id" id="student_id" name="student_id" required>
+        <option *ngFor="let student of student" [ngValue]= "student">{{student.last_name}}, {{student.first_name}}</option>
       </select>
-      <span *ngIf="formErrors.class_id" class="text-danger">
-        {{ formErrors.class_id }}
+      <span *ngIf="formErrors.student_id" class="text-danger">
+        {{ formErrors.student_id }}
       </span>
     </div>
       <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
       <!--https://angular.io/api/forms/SelectControlValueAccessor-->
   </div>
 
-  <!--<div class="form-group">
-    <label for="class_id" class="col-sm-2 control-label">Class ID</label>
-    <div class="col-sm-10">
-      <input [(ngModel)]="student_class.class_id" type="text" class="form-control" id="class_id" name="class_id"  placeholder="Class ID" required>
-    </div>
-  </div>-->
+  <!--<form (ngSubmit)="saveStudentClass(student_class.student_class_id)"  #studentClassForm="ngForm" class="form-horizontal">
+    <input [(ngModel)]="student_class.student_class_id" type="hidden" name="student_class_id">
+    <div class="form-group">
+      <label for="student_id" class="col-sm-2 control-label">Student ID</label>
+      <div class="col-sm-10">
+        <input [(ngModel)]="student_class.student_id" type="text" class="form-control" id="student_id" name="student_id" placeholder="Student ID" required>
+      </div>
+    </div>-->
 
-   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button [disabled]="!studentClassForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
+    <div class="form-group">
+      <label for="class_id" class="col-sm-2 control-label">Class</label>
+      <div class="col-sm-10">
+        <select class="form-control" [compareWith]="compareClassId" [(ngModel)]="student_class.class_id" id="class_id" name="class_id" required>
+          <option *ngFor="let classObj of classObj" [ngValue]= "classObj">{{classObj.subject}} - {{classObj.course}}</option>
+        </select>
+        <span *ngIf="formErrors.class_id" class="text-danger">
+          {{ formErrors.class_id }}
+        </span>
+      </div>
+        <!--https://stackoverflow.com/questions/39501595/angular-2-select-option-dropdown-how-to-get-the-value-on-change-so-it-can-be-->
+        <!--https://angular.io/api/forms/SelectControlValueAccessor-->
     </div>
-  </div>
-</form>
+
+    <!--<div class="form-group">
+      <label for="class_id" class="col-sm-2 control-label">Class ID</label>
+      <div class="col-sm-10">
+        <input [(ngModel)]="student_class.class_id" type="text" class="form-control" id="class_id" name="class_id"  placeholder="Class ID" required>
+      </div>
+    </div>-->
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button [disabled]="!studentClassForm.form.valid" type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </form>
+</section>
