--- a/src/app/student-class/student-class.component.html
+++ b/src/app/student-class/student-class.component.html
@@ -1,39 +1,41 @@
-<ol class="breadcrumb">
-    <li><a routerLink="/home">Home</a></li>
-    <li class="active">Student Class</li>
-</ol>
+<section @fadeInAnimation>
+  <ol class="breadcrumb">
+      <li><a routerLink="/home">Home</a></li>
+      <li class="active">Student Class</li>
+  </ol>
 
-<br/>
+  <br/>
 
-<div [ngClass]="(errorMessage)?'alert alert-danger':'alert alert-success'" role="alert" *ngIf="errorMessage || successMessage">
-    {{errorMessage}} {{successMessage}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
+  <div [ngClass]="(errorMessage)?'alert alert-danger':'alert alert-success'" role="alert" *ngIf="errorMessage || successMessage">
+      {{errorMessage}} {{successMessage}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
 
-<h2>Student Class</h2>
+  <h2>Student Class</h2>
 
-<a class="btn btn-primary" routerLink="/student-class/add">Add Student Class</a>
+  <a class="btn btn-primary" routerLink="/student-class/add">Add Student Class</a>
 
-<table class="table table-striped table-bordered" id="dataTable" style="width:100%">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Student</th>
-      <th>Class</th>
-      <th>Admin</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let student_class of student_classes">
-      <td>{{student_class.student_class_id}}</td>
-      <td>{{student_class.hasOwnProperty('student_id') ? student_class.student_id.last_name + ', ' + student_class.student_id.first_name : '' }}</td>
-      <td>{{student_class.hasOwnProperty('class_id') ? student_class.class_id.subject + ' - ' + student_class.class_id.course : '' }}</td>      
-      <td class="text-center">
-        <a class="btn btn-primary" [routerLink]="['/student-class/edit/', student_class.student_class_id]">Edit</a>&nbsp;
-        <button (click)="deleteStudentClass(student_class.student_class_id)" class="btn btn-danger">Delete</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+  <table class="table table-striped table-bordered" id="dataTable" style="width:100%">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Student</th>
+        <th>Class</th>
+        <th>Admin</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let student_class of student_classes">
+        <td>{{student_class.student_class_id}}</td>
+        <td>{{student_class.hasOwnProperty('student_id') ? student_class.student_id.last_name + ', ' + student_class.student_id.first_name : '' }}</td>
+        <td>{{student_class.hasOwnProperty('class_id') ? student_class.class_id.subject + ' - ' + student_class.class_id.course : '' }}</td>      
+        <td class="text-center">
+          <a class="btn btn-primary" [routerLink]="['/student-class/edit/', student_class.student_class_id]">Edit</a>&nbsp;
+          <button (click)="deleteStudentClass(student_class.student_class_id)" class="btn btn-danger">Delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</section>
