--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,47 +1,50 @@
-<ol class="breadcrumb">
-    <li><a routerLink="/home">Home</a></li>
-    <li class="active">Students</li>
-</ol>
+<section @fadeInAnimation>
 
-<br/>
+  <ol class="breadcrumb">
+      <li><a routerLink="/home">Home</a></li>
+      <li class="active">Students</li>
+  </ol>
 
-<div [ngClass]="(errorMessage)?'alert alert-danger':'alert alert-success'" role="alert" *ngIf="errorMessage || successMessage">
-    {{errorMessage}} {{successMessage}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
+  <br/>
 
-<h2>Students</h2>
+  <div [ngClass]="(errorMessage)?'alert alert-danger':'alert alert-success'" role="alert" *ngIf="errorMessage || successMessage">
+      {{errorMessage}} {{successMessage}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
 
-<a class="btn btn-primary" routerLink="/student/add">Add Student</a>
+  <h2>Students</h2>
 
-<table class="table table-striped table-bordered" id="dataTable" style="width:100%">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Start Date</th>
-      <th>GPA</th>
-      <th>SAT Score</th>
-      <th>Major</th>
-      <th>Admin</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let student of students">
-      <td>{{student.student_id}}</td>
-      <td>{{student.first_name}}</td>
-      <td>{{student.last_name}}</td>
-      <td>{{student.start_date}}</td>
-      <td>{{student.gpa}}</td>
-      <td>{{student.sat}}</td>
-      <td>{{student.hasOwnProperty('major_id') ? student.major_id.major : ''}}</td>
-      <td class="text-center">
-        <a class="btn btn-primary" [routerLink]="['/student/edit/', student.student_id]">Edit</a>&nbsp;
-        <button (click)="deleteStudent(student.student_id)" class="btn btn-danger">Delete</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+  <a class="btn btn-primary" routerLink="/student/add">Add Student</a>
+
+  <table class="table table-striped table-bordered" id="dataTable" style="width:100%">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Start Date</th>
+        <th>GPA</th>
+        <th>SAT Score</th>
+        <th>Major</th>
+        <th>Admin</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let student of students">
+        <td>{{student.student_id}}</td>
+        <td>{{student.first_name}}</td>
+        <td>{{student.last_name}}</td>
+        <td>{{student.start_date}}</td>
+        <td>{{student.gpa}}</td>
+        <td>{{student.sat}}</td>
+        <td>{{student.hasOwnProperty('major_id') ? student.major_id.major : ''}}</td>
+        <td class="text-center">
+          <a class="btn btn-primary" [routerLink]="['/student/edit/', student.student_id]">Edit</a>&nbsp;
+          <button (click)="deleteStudent(student.student_id)" class="btn btn-danger">Delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</section>
